@@ -3,6 +3,8 @@ What's New in IDLE 2.6a1?
 
 *Release date: XX-XXX-200X*
 
+- textView cleanup. Patch 1718043 Tal Einat.
+
 - Clean up EditorWindow close.
 
 - Corrected some bugs in AutoComplete.  Also, Page Up/Down in ACW implemented;
